# grn-confounders

./: .gitignore  InputHandler.py  README.md  TestSelectors.py  compare_G_all.py  create_JI_lineplots.py  download_tcga_cohorts.py  download_test_data.py  dummy_run_custom_wrapper.py  initiate_tests.py  pyproject.toml  requirements.txt  run_mwu_tests.py  run_tests.py  run_tests_from_yaml.py  visualize_G_all_comparisons.ipynb  visualize_mean_JIs_blocks.ipynb
config/: data.yml  data_cmd.yml  data_old  data_tcga.yml  fields.yml  fields_cmd.yml  fields_tcga.yml  params.yml  params_cmd.yml  params_tcga.yml
genie3_experiment/: README.md  compare_and_visualize_results.ipynb  data_partitioning.py  postprocessing.ipynb  preprocessing.py
results/: JI_all.csv  JI_all_g_all.csv  annotation_QC.ipynb  chi2_pvals_alcohol_history.exposures.csv  chi2_pvals_cigarettes_per_day.exposures.csv  chi2_pvals_stage.csv  chi2_pvals_tobacco_smoking_history.csv  compute_chi^2_tests.ipynb  count_jaccard_lists.ipynb  count_networks.ipynb  modmatcher_QC.R  mosaic_plot.ipynb  mwus_conf_grnboost2.csv  mwus_fast_methods.csv  plot_results.ipynb  prepare_results.ipynb  visualize_G_all_comparisons_age.ipynb  visualize_G_all_comparisons_ethnicity.ipynb  visualize_G_all_comparisons_sex.ipynb
results_paper/: Chi2_and_dataspecs.ipynb  visualize mean_JIs_blocks.ipynb  visualize_G_all_comparisons.ipynb  visualize_G_all_comparisons_age.ipynb  visualize_G_all_comparisons_sex.ipynb  visualize_mean_JIs_blocks.ipynb
test_suite/: ARACNEWrapper.py  CEMiWrapper.py  CUSTOMGCNWrapper.py  CUSTOMGRNWrapper.py  ablage.py  (+22 more)
(+20507 files in other folders)
